# spinlab

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build-sphinx-documentation-push-manually-for-staging.yml  build-sphinx-documentation-push-to-AWS.yml  build-test-python-3_12.yml  build-test-python-package.yml  publish-to-test-pypi.yml
docs/source/: conf.py  currentRelease.rst  getInvolved.rst  index.rst  installation.rst  sg_execution_times.rst
docs/source_prev/: conf.py  functions.rst  funding.rst  introduction.rst  license.rst  modules.rst  people.rst  sg_execution_times.rst
examples/: README.rst
examples/01_ImportingData/: plot_01_load_1D_NMR_spectrum_Bruker.py  plot_02_load_1D_NMR_spectrum_Kea.py
examples/02_Analysis/: plot_01_load_2D_calculate_DNP_enhancements.py  plot_02_analyze_inversion_recovery_experiments.py
examples/03_Advanced/: plot_01_align_nmr_spectra.py  plot_02_extract_data.py
examples/04_Tools/: README.rst  plot_02_using_numpy_functions.py
spinlab/: __init__.py
spinlab/analysis/: __init__.py  peaks.py  simulate_enhancement_profiles.py
spinlab/config/: config.py  spinlab.cfg
spinlab/constants/: mrProperties.py  radicalProperties.py
unittests/: data_testconfig.cfg  test_average.py  test_data_class.py  test_dnp_nmr.py  test_dnp_tools.py  test_fft.py  test_general_fit.py  test_hydration.py  test_io.py  test_load.py  test_m_math.py  test_nddata_core.py  test_processing.py  test_processing_helpers.py  test_save.py  testing.py
(+152 files in other folders)
