[project]
name = "spinlab"
dynamic = ["version"]
description = "SpinLab - Bringing the Power of Python to NMR-EPR Spectroscopy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["ODNP", "DNP", "Spin", "NMR", "EPR"]

[tool.setuptools.packages.find]
include = ["spinlab*", "spinlab"]

[build-system]
requires = ["setuptools", "numpy >= 2.0.0", "scipy>=1.14.0", "matplotlib>=3.9.0", "h5py>=3.11.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mypkg = ["*.cfg"]

[tool.setuptools.dynamic]
version = {attr = "spinlab.version.__version__"}
